--- a/_config.yml
+++ b/_config.yml
@@ -19,11 +19,9 @@
 # in the templates via {{ site.myvariable }}.
 
 title: SP Sursee
-email: your-email@example.com
+email: fabian.boesiger@sp-sursee.ch
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Ein Sursee für alle statt für wenige.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://sp-sursee.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 # twitter_username: jekyllrb
